--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <h1>Exotics & Flagships</h1>
+      <h1>Exotics & Flagships Cars</h1>
       <div class="search-sort">
         <input id="searchInput" type="search" placeholder="Search models, trims, engines…" />
         <select id="sortSelect" aria-label="Sort cars">
